tests/__snapshots__/validation-configFile-wrong-root-value.snap.txt
Error: The root value of a configuration file must be an object literal.

> 1 | [
    | ^
  2 |   {
  3 |     "failFast": true
  4 |   }
  5 | ]

      at ./tstyche.config.json:1:1

